--- a/Content/website/static/styles.css
+++ b/Content/website/static/styles.css
@@ -45,7 +45,7 @@
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
-  --bs-info-rgb: 13, 202, 240;
+  --bs-info-rgb: 13, 12, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
@@ -6661,7 +6661,7 @@ h2{
 
 .text-bg-primary {
   color: #fff !important;
-  background-color: RGBA(13, 110, 253, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(108, 117, 125,  var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -7969,6 +7969,7 @@ h2{
 
 .fw-bolder {
   font-weight: bolder !important;
+  color: indigo;
 }
 
 .lh-1 {
