--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -14,15 +14,56 @@
                             <p class="lead fw-normal text-white-50 mb-4">Discuss and show your creations with others or learn how to create media with Adobe Premiere Pro! </p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">More Info</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Sign Up</a>
+                                <a class="btn btn-outline-light btn-lg px-4" href="http://127.0.0.1:5000/sign-up">Sign Up</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"> 
+                        <iframe width="420" height="315"
+                        src="https://www.youtube.com/watch?v=cNZtsGTvJeY&ab_channel=BetaSquad">
+                        </iframe>
                 </div>
             </div>
         </header>
         <!-- Features section-->
+        <section class="py-5" id="Premiere Pro Info">
+            <div class="container px-5 my-5">
+                <div class="row gx-5">
+                    <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What is Adobe Premiere Pro?</h2></div>
+                    <div class="col-lg-8">
+                        <div class="row gx-5 row-cols-1 row-cols-md-2">
+                            <div class="col mb-5 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                                <h2 class="h5"> Premiere Pro</h2>
+                                <p class="mb-0">Watch & Read Tutorials in order to enhance the quality of your media!</p>
+                            </div>
+                            <div class="col mb-5 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                                <h2 class="h5">Capabilities</h2>
+                                <p class="mb-0">Gain exposure by sharing your projects so others can learn and appreciate it.</p>
+                            </div>
+                            <div class="col mb-5 mb-md-0 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                <h2 class="h5"> Effects & Plugins</h2>
+                                <p class="mb-0">Show your support or provide constructive critisicm on others posts (no swearing or bad manners)</p>
+                            </div>
+                            <div class="col h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                <h2 class="h5">Computer Requirements</h2>
+                                <p class="mb-0">An Intel 6thGen or newer CPU - or an AMD Ryzen 1000 series or newer CPU.
+                                    Microsoft Windows 10 (64-bit) version 1909 or later.
+                                    8 GB of Ram.
+                                    2 GB of GPU memory.
+                                    8 GB of hard disk space for installation.
+                                    1920 x 1080 display.
+                                    An ASIO-compatible sound card.
+                                    Internet connection.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="py-5" id="features">
             <div class="container px-5 my-5">
                 <div class="row gx-5">
@@ -48,25 +89,7 @@
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                 <h2 class="h5">Connect with likeminded people!</h2>
                                 <p class="mb-0">Upload your own profile picture and create your unique username so others can see</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Testimonial section-->
-        <div class="py-5 bg-light">
-            <div class="container px-5 my-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-lg-10 col-xl-7">
-                        <div class="text-center">
-                            <div class="fs-4 mb-4 fst-italic">"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</div>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                <div class="fw-bold">
-                                    Tom Ato
-                                    <span class="fw-bold text-primary mx-1">/</span>
-                                    CEO, Pomodoro
+     
                                 </div>
                             </div>
                         </div>
